src/snapshots/rlox__test_errors__missing_primary.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print ();\\n\")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print ();
   │        ┬  
   │        ╰── Expected primary
───╯


